# polish-law

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: ocr-remote.sh  refine-ocr.py  test-all-commits.sh
src/legis_cli/: app.py  compat.py
src/legis_cli/commands/: __init__.py  base.py  get_act.py  get_article.py  get_journal.py
src/liblegis/: __init__.py  journal.py  legal_act.py
src/liblegis/backends/: __init__.py  base.py  git.py
tests/: conftest.py  test_articles.py
tests/test_documents/: test_articles.py  test_file_naming.py
tests/test_liblegis/: conftest.py  test_journal.py
typings/argcomplete/: __init__.py
typings/pygit2/: __init__.py
