[tool.poetry]
name = "polish-law"
version = "0.1.0"
description = ""
authors = ["Piotr Szpetkowski <piotr.szpetkowski@pyquest.space>"]
license = "MIT"
packages = [
    { include = "liblegis", from = "src" },
    { include = "legis_cli", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pygit2 = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0rc1"
pre-commit = "^2.16.0"
black = "^21.12b0"
ipython = "^7.30.1"

[tool.poetry.scripts]
legis = "legis_cli.app:main"

[tool.mypy]
mypy_path = "./typings"
strict = true
files = "src"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
