[tool.poetry]
name = "polish-law"
version = "0.1.0"
description = ""
authors = ["Piotr Szpetkowski <piotr.szpetkowski@pyquest.space>"]
license = "MIT"
packages = [
    { include = "liblegis", from = "src" },
    { include = "legis_cli", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pygit2 = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pre-commit = "^2.17.0"
black = "^22.3.0"
ipython = "^8.2.0"

[tool.poetry.scripts]
legis = "legis_cli.app:main"

[tool.mypy]
mypy_path = "./typings"
strict = true
files = "src"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
